[home] fix type spacing

--- a/src/styles/page/home.scss
+++ b/src/styles/page/home.scss
@@ -38,6 +38,11 @@
     top:40%;
     width: 80vw;
     transform: translateX(-50%)translateY(-50%);
+    margin-bottom:0;
+
+    h1 {
+        margin-bottom:0;
+    }
 
     svg {
         transform: scale(120%);
